Prevent layout shift on comment load

--- a/packages/web/src/assets/styles/partials/components/_comments.scss
+++ b/packages/web/src/assets/styles/partials/components/_comments.scss
@@ -8,6 +8,13 @@
   border-top: solid 1px functions.token('color', 'border', '0');
 }
 
+#comments-placeholder {
+  min-block-size: calc(60rem / 16);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .post-comment {
   &-meta > * {
     display: inline;
